--- a/catkin_ws/src/robot_gazebo/armc_gazebo/config/controller.yaml
+++ b/catkin_ws/src/robot_gazebo/armc_gazebo/config/controller.yaml
@@ -43,3 +43,8 @@ armc:
       Joint5:   {p: 1000.0, i: 0.0, d: 0.1, i_clamp: 0.0}
       Joint6:   {p: 1000.0, i: 0.0, d: 0.1, i_clamp: 0.0}
       Joint7:   {p: 1000.0, i: 0.0, d: 0.1, i_clamp: 0.0}
+
+  finger_controller:
+    type: position_controllers/JointPositionController
+    joint: finger_joint
+    pid: {p: 100.0, i: 0.01, d: 10.0}
