--- a/catkin_ws/src/robot_gazebo/robots_gazebo/config/ur5_controller.yaml
+++ b/catkin_ws/src/robot_gazebo/robots_gazebo/config/ur5_controller.yaml
@@ -19,5 +19,10 @@ ur5_position_controller:
 # Publish all joint states -----------------------------------
 joint_state_controller:
   type: joint_state_controller/JointStateController
-  publish_rate: 100  
+  publish_rate: 100
+
+finger_controller:
+    type: position_controllers/JointPositionController
+    joint: finger_joint
+    pid: {p: 100.0, i: 0.01, d: 10.0}  
 
